<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imageAppIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_app"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/txtLoginTitle"
        />

    <TextView
        android:id="@+id/txtLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        style="@style/headingTitleTextStyle"
        android:textColor="@color/purple_700"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageAppIcon"
        app:layout_constraintBottom_toTopOf="@+id/linLayLoginReg"
        app:layout_constraintVertical_chainStyle="packed" />
    <LinearLayout
        android:id="@+id/linLayLoginReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginTitle"
        app:layout_constraintBottom_toTopOf="@+id/txtInputLayoutUserName"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:paddingEnd="20dp"
            android:textColor="@color/purple_700"
            android:text="@string/tab_login"/>
        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:textSize="20sp"
            android:paddingStart="20dp"
            android:text="@string/tab_register_u"/>

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        app:startIconDrawable="@drawable/ic_user_image_place_holder"
        app:startIconTint="@color/black"
        app:boxStrokeColor="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linLayLoginReg"
        app:layout_constraintBottom_toTopOf="@+id/txtInputLayoutPassword"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_value" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        app:startIconDrawable="@drawable/ic_password"
        app:endIconMode="password_toggle"
        app:startIconTint="@color/black"
        app:boxStrokeColor="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutUserName"
        app:layout_constraintBottom_toTopOf="@+id/checkboxRemememberPassword"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_value"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:paddingEnd="20dp"
        app:layout_constraintTop_toTopOf="@id/checkboxRemememberPassword"
        app:layout_constraintBottom_toBottomOf="@+id/checkboxRemememberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>
   <CheckBox
       android:id="@+id/checkboxRemememberPassword"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Rememember Password"
       android:layout_marginStart="20dp"
       app:layout_constraintTop_toBottomOf="@id/txtInputLayoutPassword"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintBottom_toTopOf="@+id/btnLogin"
       app:layout_constraintVertical_chainStyle="packed"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tab_login"
        android:visibility="visible"
        android:padding="10dp"
        android:layout_margin="20dp"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxRemememberPassword"
        app:layout_constraintBottom_toTopOf="@+id/txtPrivacyPolicy"
        app:layout_constraintVertical_chainStyle="packed"/>
    <TextView
        android:id="@+id/txtPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacyPolicy"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txtOrConnect"
        app:layout_constraintVertical_chainStyle="packed"/>
    <TextView
        android:id="@+id/txtOrConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="or connect with"
        android:padding="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/txtPrivacyPolicy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linrarLayOrConnect"
        app:layout_constraintVertical_chainStyle="packed"/>
    <LinearLayout
        android:id="@+id/linrarLayOrConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/txtOrConnect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="packed">
        <ImageButton
            android:id="@+id/imgBtnFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_facebook"/>
        <ImageButton
            android:id="@+id/imgBtnInstagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_instagram"/>
        <ImageButton
            android:id="@+id/imgBtnPinterest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_pinterest"/>
        <ImageButton
            android:id="@+id/imgBtnLinkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_linkedin"/>

    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:trackColor="@color/black"
        app:indicatorColor="@color/purple_700"
        app:indicatorSize="25dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintTop_toTopOf="@+id/btnLogin"
        app:layout_constraintBottom_toBottomOf="@+id/btnLogin"/>


</androidx.constraintlayout.widget.ConstraintLayout>